--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
       - name: Install dependencies
-        run: npm ci
+        run: npm i
       - name: Update sponsors
         run: npm run build
         env:
