--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: npm i
       - name: Update sponsors
-        run: npm run build
+        run: npm run sponsorkit
         env:
           SPONSORKIT_GITHUB_TOKEN: ${{ secrets.SPONSORKIT_GITHUB_TOKEN }}
           SPONSORKIT_GITHUB_LOGIN: ${{ secrets.SPONSORKIT_GITHUB_LOGIN }}
