--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -33,8 +33,10 @@ jobs:
         env:
           SPONSORKIT_GITHUB_TOKEN: ${{ secrets.SPONSORKIT_GITHUB_TOKEN }}
           SPONSORKIT_GITHUB_LOGIN: ${{ secrets.SPONSORKIT_GITHUB_LOGIN }}
-          SPONSORKIT_AFDIAN_USER_ID: ${{ secrets.SPONSORKIT_AFDIAN_USER_ID }}
-          SPONSORKIT_AFDIAN_TOKEN: ${{ secrets.SPONSORKIT_AFDIAN_TOKEN }}
+          SPONSORKIT_GITHUB_TYPE: ${{ secrets.SPONSORKIT_GITHUB_TYPE }}
+          SPONSORKIT_OPENCOLLECTIVE_KEY: ${{ secrets.SPONSORKIT_OPENCOLLECTIVE_KEY }}
+          SPONSORKIT_OPENCOLLECTIVE_SLUG: ${{ secrets.SPONSORKIT_OPENCOLLECTIVE_SLUG }}
+          SPONSORKIT_OPENCOLLECTIVE_TYPE: ${{ secrets.SPONSORKIT_OPENCOLLECTIVE_TYPE }}
       - name: Commit files
         uses: EndBug/add-and-commit@v9
         with:
