--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -36,6 +36,7 @@ jobs:
           SPONSORKIT_GITHUB_TYPE: ${{ secrets.SPONSORKIT_GITHUB_TYPE }}
           SPONSORKIT_OPENCOLLECTIVE_KEY: ${{ secrets.SPONSORKIT_OPENCOLLECTIVE_KEY }}
           SPONSORKIT_OPENCOLLECTIVE_SLUG: ${{ secrets.SPONSORKIT_OPENCOLLECTIVE_SLUG }}
+          SPONSORKIT_POLAR_TOKEN: ${{ secrets.SPONSORKIT_POLAR_TOKEN }}
       - name: Commit files
         uses: EndBug/add-and-commit@v9
         with:
