--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -37,6 +37,7 @@ jobs:
           SPONSORKIT_OPENCOLLECTIVE_KEY: ${{ secrets.SPONSORKIT_OPENCOLLECTIVE_KEY }}
           SPONSORKIT_OPENCOLLECTIVE_SLUG: ${{ secrets.SPONSORKIT_OPENCOLLECTIVE_SLUG }}
           SPONSORKIT_POLAR_TOKEN: ${{ secrets.SPONSORKIT_POLAR_TOKEN }}
+          SPONSORKIT_POLAR_ORGANIZATION: ${{ secrets.SPONSORKIT_POLAR_ORGANIZATION }}
       - name: Commit files
         uses: EndBug/add-and-commit@v9
         with:
